; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22128.c_create_shellscript_file.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_22128.c_create_shellscript_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHELLSCRIPT_FILE = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Could not create %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@shell_script = common dso_local global i8* null, align 8
@S_IXOTH = common dso_local global i32 0, align 4
@S_IROTH = common dso_local global i32 0, align 4
@S_IWOTH = common dso_local global i32 0, align 4
@S_IXUSR = common dso_local global i32 0, align 4
@S_IRUSR = common dso_local global i32 0, align 4
@S_IWUSR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @create_shellscript_file() #0 {
  %1 = alloca i32*, align 8
  %2 = load i8*, i8** @SHELLSCRIPT_FILE, align 8
  %3 = call i32* @fopen(i8* %2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i8*, i8** @SHELLSCRIPT_FILE, align 8
  %7 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %6)
  %8 = call i32 @exit(i32 1) #3
  unreachable

9:                                                ; preds = %0
  %10 = load i32*, i32** %1, align 8
  %11 = load i8*, i8** @shell_script, align 8
  %12 = call i32 @fprintf(i32* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i8* %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @fclose(i32* %13)
  %15 = load i8*, i8** @SHELLSCRIPT_FILE, align 8
  %16 = load i32, i32* @S_IXOTH, align 4
  %17 = load i32, i32* @S_IROTH, align 4
  %18 = or i32 %16, %17
  %19 = load i32, i32* @S_IWOTH, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @S_IXUSR, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @S_IRUSR, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @S_IWUSR, align 4
  %26 = or i32 %24, %25
  %27 = call i32 @chmod(i8* %15, i32 %26)
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @fprintf(i32*, i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @chmod(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
